# hello-kuzu

./: .gitignore  Makefile  README.md  main.py  pyproject.toml  queries.txt  run_queries.py
demo_db/: catalog.kz  data.kz  metadata.kz
